card gap, dots button and tooltip issue fixed

--- a/src/app/components/core/configuration-manager/kv-list-type-configuration/kv-list-type-configuration.component.css
+++ b/src/app/components/core/configuration-manager/kv-list-type-configuration/kv-list-type-configuration.component.css
@@ -35,7 +35,9 @@
 }
 
 .card-content {
-  padding: 0.25rem 0.5rem;
+  padding: 0.25rem 0.5rem 0 0.5rem;
+  margin-bottom: -0.5rem;
+  overflow: hidden;
 }
 
 .card-shadow {
@@ -81,7 +83,7 @@
 .btn-panel-container {
   height: 15px;
   position: relative;
-  z-index: 99;
+  z-index: 1;
   display: flex;
 }
 
