--- a/src/app/components/core/configuration-manager/list-type-configuration/list-type-configuration.component.css
+++ b/src/app/components/core/configuration-manager/list-type-configuration/list-type-configuration.component.css
@@ -17,7 +17,9 @@
 }
 
 .card-content {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1rem 0 1rem;
+    margin-bottom: -0.25rem;
+    overflow: hidden;
 }
 
 .card-shadow {
@@ -34,7 +36,7 @@
 }
 
 .btn-container {
-    width: 50% !important;
+    width: 70% !important;
     display: flex;
     justify-content: space-between;
 }
@@ -78,7 +80,7 @@
 .btn-panel-container {
   height: 15px;
   position: relative;
-  z-index: 99;
+  z-index: 1;
   display: flex;
 }
 
